--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,7 @@
         </a>
     </footer>
     <div class="wa-footer">
-        <a href="https://youtube.com/@hendarseptiandi2930">
+        <a href="https://wa.me/qr/SIHYC5GDSPXOB1">
             <img src="wa.png" alt="youtune" style="display:block; margin:auto; width:100px; height:
             100px;">WHASTHAPP
         </a>
